assets/css/style.css
/*step 1 of 3 to make sticky footer*/
html {
	position: relative;
	min-height: 100%;
}

/*margin 85 (height of footer) is step 2 of 3 to make sticky footer*/
body {
	background: url("../images/alienWorld.jpg") no-repeat;
	font-family: 'Prosto One', cursive;
	margin: 0 0 10px 0;
}

@keyframes scale {
  0% {
    transform: scale(0.9);
  }

  25% {
    transform: scale(1);
  }

  60% {
    transform: scale(0.9);
  }

  100% {
    transform: scale(1);
  }
}

h1 {
	font-size: 62px;
	margin-top: 10px;
	margin-bottom: 25px;
	color: #00b139;
	text-align: center;
    animation: scale 6s ease-out normal;
}

.player > .stats {
	position: absolute;
	bottom: -42px;
	left: 15px;
	background-color: #8BFFD1;
	width: 150px;
	padding-left: 45px;
	padding-top: 12px;
	line-height: 8px;
	font-weight: bold;
}

#messageRow {
	text-align: center;
	font-weight: bold;
	height: 90px;
	font-size: 25px;
	padding-top: 28px;
	color: #FFE96A;
	line-height: 2px;
	margin-top: 50px;
}

button {
	color: black;
	background-color: #1E91D6;
	font-size: 19px;
	margin: 20px auto 0 auto;
	padding: 12px;
	font-weight: bold;
	line-height: 2px;
}

#battleLabels {
	font-weight: bold;
	font-size: 25px;
	color: #00b139;
	text-align: center;
}

#dance {
	margin-top: 70px;
}

.danceDiv {
	text-align: center;
}

#player1 {
	margin-top: 25px;
}

#playerImg1 {
	height: 145px;
}

#player2 {
	margin-top: 40px;
}

#playerImg2 {
	height: 130px;
}

#player3 {
	margin-top: 50px;
}

#playerImg3 {
	height: 120px;
}

#playerImg4 {
	height: 170px;
}

/*prevents collapse when enemies all chosen*/
#nonbattlePlayers {
	height: 170px;
}

#battleGround {
	height: 170px;
}

/*position absolute/bottom 0/width 100% is step 3 of 3 to make sticky footer*/
footer {
	position: absolute;
	height: 10px;
	bottom: 0;
	width: 100%;
	left: 5px;
	color: #FFE96A;
}

/************ MEDIA 1200 MEDIA 1200 MEDIA 1200 MEDIA 1200 MEDIA 1200 *******************************/

@media screen and (max-width: 1200px) {

	h1 {
		font-size: 62px;
		margin-top: 10px;
				margin-bottom: 25px;
	}

	.player > .stats {
		left: 15px;
		width: 150px;
		padding-left: 45px;
		line-height: 8px;
	}

	#messageRow {
		height: 90px;
		font-size: 25px;
		line-height: 2px;
		margin-top: 50px;
		margin-bottom: 0;
	}

	button {
		font-size: 19px;
		margin: 20px auto 0 auto;
	}

	#battleLabels {
		font-size: 22px;
	}

	#dance {
		margin-top: 40px;
	}

	#playerImg1 {
		height: 125px;
	}

	#playerImg2 {
		height: 110px;
	}

	#playerImg3 {
		height: 100px;
	}

	#playerImg4 {
		height: 150px;
	}

}

/************ MEDIA 980 MEDIA 980 MEDIA 980 MEDIA 980 MEDIA 980 *******************************/

@media screen and (max-width: 980px) {

	h1 {
		font-size: 60px;
		margin-bottom: 0;
	}

	.player > .stats {
		left: 18px;
		width: 140px;
		padding-left: 40px;
		line-height: 8px;
	}

	#messageRow {
		height: 120px;
		font-size: 21px;
		line-height: 25px;
		margin-top: 30px;
		margin-bottom: 20px;
	}

	button {
		font-size: 17px;
		margin: 10px auto 0 auto;
	}

	#battleLabels {
		font-size: 25px;
	}

	#dance {
		margin-top: 40px;
	}

	#playerImg1 {
		height: 125px;
	}

	#playerImg2 {
		height: 110px;
	}

	#playerImg3 {
		height: 100px;
	}

	#playerImg4 {
		height: 150px;
	}

}

/************ MEDIA 768 MEDIA 768 MEDIA 768 MEDIA 768 MEDIA 768 *******************************/

@media screen and (max-width: 768px) {

	h1 {
		font-size: 55px;
		margin-bottom: 0;
	}

	.player > .stats {
		left: 18px;
		width: 110px;
		padding-left: 25px;
		line-height: 6px;
	}

	#messageRow {
		height: 150px;
		font-size: 19px;
		line-height: 25px;
		margin-top: 0;
	}

	button {
		font-size: 17px;
		margin: 10px auto 0 auto;
	}

	#battleLabels {
		font-size: 22px;
	}

	#dance {
		margin-top: 40px;
	}

	#playerImg1 {
		height: 125px;
	}

	#playerImg2 {
		height: 110px;
	}

	#playerImg3 {
		height: 100px;
	}

	#playerImg4 {
		height: 150px;
	}

}

/************ MEDIA 640 MEDIA 640 MEDIA 640 MEDIA 640 MEDIA 640 *******************************/

@media screen and (max-width: 640px) {

	h1 {
		font-size: 55px;
		margin-bottom: 0;
	}

	.player > .stats {
		left: 18px;
		width: 90px;
		padding-left: 5px;
		line-height: 6px;
	}

	#messageRow {
		height: 150px;
		font-size: 19px;
		line-height: 25px;
		margin-top: 0;
	}

	button {
		font-size: 17px;
		margin: 10px auto 0 auto;
	}

	#battleLabels {
		font-size: 22px;
	}

	#dance {
		margin-top: 40px;
	}

	#playerImg1 {
		height: 115px;
	}

	#playerImg2 {
		height: 100px;
	}

	#playerImg3 {
		height: 90px;
	}

	#playerImg4 {
		height: 140px;
	}

}

/************ MEDIA 520 MEDIA 520 MEDIA 520 MEDIA 520 MEDIA 520 *******************************/

@media screen and (max-width: 520px) {

	h1 {
		font-size: 45px;
		margin-bottom: 0;
	}

	.player > .stats {
		left: 10px;
		width: 85px;
		padding-left: 5px;
		line-height: 6px;
	}

	#messageRow {
		height: 150px;
		font-size: 18px;
		line-height: 25px;
		margin-top: 0;
	}

	button {
		font-size: 15px;
		margin: 10px auto 0 auto;
	}

	#battleLabels {
		font-size: 21px;
	}

	#dance {
		margin-top: 40px;
	}

	#playerImg1 {
		height: 105px;
	}

	#playerImg2 {
		height: 90px;
	}

	#playerImg3 {
		height: 80px;
	}

	#playerImg4 {
		height: 130px;
	}

}

